# Spark-Medallion-Architecture

./: .gitignore  README.md  pyproject.toml
notebook/: 01_Bronze_Ingestion.ipynb  02_Silver_Transformation.ipynb  03_Gold_Business.ipynb  04_Full_Pipeline.ipynb  05_Verify_Data.ipynb
spark/common/: helpers.py  logger.py  spark_session.py
spark/config/: config.yaml
spark/gold/: category_summary.py  item_summary.py  kpi_summary.py  outlet_summary.py  sales_summary.py  write_gold.py
spark/ingestion/: read_bigmart.py  write_bronze.py
spark/jobs/: run_bronze.py  run_gold.py  run_pipeline.py  run_silver.py
spark/readers/: read_bronze.py  read_silver.py
spark/transformations/: clean_data.py  feature_engineering.py  read_silver.py  write_silver.py
spark/validation/: quality_checks.py
