[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "delta-spark>=4.3.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
